# window-border

./: Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: build.yml
icons/: tray.rc
src/: main.rs
