[package]
name = "Glint"
version = "0.1.0"
edition = "2021"

[dependencies]
toml = "0.8"
regex = "1.10"
dirs = "5"
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_HiDpi",
    "Win32_UI_Accessibility",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
] }
